creazione metodo per ricerca postazione per città e tipo